--- a/index.css
+++ b/index.css
@@ -3,58 +3,79 @@ html {
   font-size: -webkit-calc(87.5% + 0.25 * (100vw - 8000%) / 40);
 }
 
-body{
-  width:100%;
-  background-color: white;
-
-}
+*{margin:0;padding:0;}
 
 h1 {
-    font-size: 2.5rem;
-    color: black;
-    font-family: 'Open Sans', sans-serif;
-}
-
-h3 {
-    font-size:1.875rem;
-    color: black;
-    font-family:'Work Sans', sans-serif;
-}
-
-h2 {
-    font-family:'Open Sans', sans-serif;
-}
-
-.banner img {
-    opacity: 50% ;
-}
-
-.text1 {
+  font-size: 2.5rem;
+  color: black;
   font-family: 'Open Sans', sans-serif;
 }
 
-.button1 {
-display: block;
-background-color:white;
- outline: black;
- outline: .5em;
- margin: auto;
- text-align: center;
- width: 8cm;
- height: 1.5cm;
+h3 {
+  font-size:1.875rem;
+  color: black;
+  font-family:'Work Sans', sans-serif;
+}
+
+h2 {
+  font-family:'Open Sans', sans-serif;
+}
+
+
+
+.banner{
+  position:relative;
+  width:90%;
+  margin:0 auto;
+}
+
+.banner img{
+  width:100%;
+  opacity: 50% ;
+}
+
+.heading{
+  color:black;
+  position:absolute;
+  top: 15%;
+  width:100%;
+  text-align:center;
+  font-size: 7rem;}
+
+.text1{
+  color:black;
+  font-family: 'Open Sans', sans-serif;
+  position:absolute;
+  top: 45%;
+  width:100%;
+  text-align:center;
+  font-size: 1.8rem;
 }
 
 .button1 {
-    font-size: 1.25rem;
-    font-family: 'Roboto', sans-serif;
-    color: black;
+  display: block;
+  background-color:white;
+  outline: black;
+  outline: .5em;
+  margin: auto;
+  text-align: center;
+  width: 8cm;
+  height: 1.5cm;
+  margin-bottom: 5rem;
+}
+
+.button1 {
+  font-size: 1.25rem;
+  font-family: 'Roboto', sans-serif;
+  color: black;
 }
 
 .faqs {
-    font-size: 2.5rem;
-    font-family: "Times","Times New Roman",serif;
-    font-weight:bold;
-    text-align: center;
+  font-size: 2.5rem;
+  font-family: "Times","Times New Roman",serif;
+  font-weight:bold;
+  text-align: center;
+  margin-bottom: 1.5rem;
 }
 
 .faqs-container{
@@ -68,18 +89,18 @@ background-color:white;
 }
 
 .faqsq1 {
-    font-size: 2rem;
-    font-family: "Times","Times New Roman",serif;
-    font-weight: bold;
-    text-align: center;
-    margin-left: 1cm;
-    margin-right: 1cm;
+  font-size: 2rem;
+  font-family: "Times","Times New Roman",serif;
+  font-weight: bold;
+  text-align: center;
+  margin-left: 1cm;
+  margin-right: 1cm;
 }
 
 .faqsa1 {
-    font-size: 1.5rem;
-    font-family: "Times","Times New Roman",serif;
-    text-align: center;
-    margin-left: 1cm;
-    margin-right: 1cm;
+  font-size: 1.5rem;
+  font-family: "Times","Times New Roman",serif;
+  text-align: center;
+  margin-left: 1cm;
+  margin-right: 1cm;
 }
