--- a/index.css
+++ b/index.css
@@ -3,7 +3,10 @@ html {
   font-size: -webkit-calc(87.5% + 0.25 * (100vw - 8000%) / 40);
 }
 
-*{margin:0;padding:0;}
+*{
+  margin:0;
+  padding:0;
+}
 
 h1 {
   font-size: 2.5rem;
@@ -21,12 +24,17 @@ h2 {
   font-family:'Open Sans', sans-serif;
 }
 
-
+div.title {
+  padding: 3rem;
+  text-align: left;
+  vertical-align: text-top;
+}
 
 .banner{
   position:relative;
   width:90%;
   margin:0 auto;
+  margin-bottom: 4rem;
 }
 
 .banner img{
@@ -37,6 +45,7 @@ h2 {
 .heading{
   color:black;
   position:absolute;
+  text-transform: capitalize;
   top: 15%;
   width:100%;
   text-align:center;
@@ -45,6 +54,7 @@ h2 {
 .text1{
   color:black;
   font-family: 'Open Sans', sans-serif;
+  text-transform: capitalize;
   position:absolute;
   top: 45%;
   width:100%;
@@ -54,20 +64,17 @@ h2 {
 
 .button1 {
   display: block;
+  color: black;
+  font-size: 1.25rem;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
   background-color:white;
   outline: black;
   outline: .5em;
   margin: auto;
-  text-align: center;
   width: 8cm;
   height: 1.5cm;
   margin-bottom: 5rem;
-}
-
-.button1 {
-  font-size: 1.25rem;
-  font-family: 'Roboto', sans-serif;
-  color: black;
 }
 
 .faqs {
@@ -84,7 +91,7 @@ h2 {
 }
 
 .qa {
-  flex: 1 1 250px;
+  flex: 1 0 47vw;
   margin: 10px;
 }
 
