Changed it so that the ordering of FAQs is done with javascript, this makes it not necessary to write them in the correct order nor to go to the index.css to edit the contents.

--- a/index.css
+++ b/index.css
@@ -114,15 +114,10 @@ div.title {
   flex-flow: wrap;
 }
 
-.qa {
+.faqs-container > .qa {
   flex: 1 0 47vw;
   margin: 10px;
 }
-
-#faq1 {order: 1}
-#faq2 {order: 2}
-#faq3 {order: 3}
-#faq4 {order: 4}
 
 .faqsq1 {
   font-size: 2rem;
