--- a/index.css
+++ b/index.css
@@ -138,3 +138,31 @@ div.title {
   margin-left: 1cm;
   margin-right: 1cm;
 }
+
+.contacth {
+  font-size: 2rem;
+  font-family: "Times","Times New Roman",serif;
+  font-weight: bold;
+  text-align: center;
+  margin-left: 1cm;
+  margin-right: 1cm;
+}
+
+
+.contacta1 {
+  font-size: 2rem;
+  font-family: "Times","Times New Roman",serif;
+  font-weight: bold;
+  text-align: center;
+  margin-left: 1cm;
+  margin-right: 1cm;
+}
+
+.contacta2 {
+  font-size: 2rem;
+  font-family: "Times","Times New Roman",serif;
+  font-weight: bold;
+  text-align: center;
+  margin-left: 1cm;
+  margin-right: 1cm;
+}
