--- a/index.css
+++ b/index.css
@@ -17,14 +17,14 @@ html {
   padding:0;
 }
 
-h1 {
-  font-size: 1.7rem;
+#home h1 {
+  font-size: 1.3em;
   color: black;
   font-family: 'Open Sans', sans-serif;
 }
 
-h3 {
-  font-size:1.4rem;
+#home h3 {
+  font-size:1em;
   color: black;
   font-family:'Work Sans', sans-serif;
 }
@@ -33,10 +33,57 @@ h2 {
   font-family:'Open Sans', sans-serif;
 }
 
-div.title {
-  padding: 2rem;
+nav{
+  overflow: hidden;
+  position: relative;
+  font-size: 1.4em;
+  padding: 1em;
+}
+
+nav a {
+  text-decoration: none;
+  color: inherit;
+  margin: 15px;
+}
+
+nav div.container{
+  position: absolute;
+  top: 40%;
+  right: 10px;
+}
+
+nav a.icon{
+  display: none;
+}
+
+nav div#title {
+  float: left;
   text-align: left;
-  vertical-align: text-top;
+  padding: 2rem;
+}
+
+@media (max-width: 700px) {
+  nav div.container {display: none;}
+  nav a.icon {
+    float: right;
+    display: block;
+    position: absolute;
+    height: 50%;
+    top: 2.4em;
+    right: 10px;
+  }
+
+  nav.responsive a.non-home{
+    text-align: left;
+    display: block;
+  }
+
+  nav.responsive div.container {
+    float: none;
+    display: block;
+    position: static;
+    text-align: left;
+  }
 }
 
 .banner{
@@ -170,6 +217,6 @@ div.title {
 
 hr {
   color:black;
-  height: 2px; 
-  
+  height: 2px;
+
 }
